# secops-alert-router

./: .gitignore  README.md  inference.py
secops_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
secops_env/server/: Dockerfile  __init__.py  alert_generator.py  app.py  rubrics.py  secops_environment.py  tasks.py
tests/: test_environment.py
